XSS Filter, Log Source, MongoDB Hospital app

--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -37,7 +37,10 @@
           <a><span class="fa fa-home mr-3"></span>Logs</a>
         </li>
         <li>
-          <a routerLink="/logs"><span class="fa fa-user mr-5"></span> All logs</a>
+          <a routerLink="/admin-logs"><span class="fa fa-user mr-5"></span> Admin application logs</a>
+        </li>
+        <li>
+          <a routerLink="/hospital-logs"><span class="fa fa-user mr-5"></span> Hospital logs</a>
         </li>
 
         <li>
